--- a/examples/cmake/minimum_project/CMakeLists.txt
+++ b/examples/cmake/minimum_project/CMakeLists.txt
@@ -1,5 +1,6 @@
+#设置cmake的版本要求
 cmake_minimum_required(VERSION 3.10)
-
-project(Starter)
-
-add_executable(Starter main.cpp)
+#设置工程名称
+project(gcd)
+#添加要编译的源码
+add_executable(gcd main.cpp)
