--- a/examples/cmake/opencv_cpp_project/CMakeLists.txt
+++ b/examples/cmake/opencv_cpp_project/CMakeLists.txt
@@ -4,4 +4,4 @@ find_package(OpenCV REQUIRED)
 include_directories( ${OpenCV_INCLUDE_DIRS} )
 aux_source_directory(. EXEC_FILES)
 add_executable(detector ${EXEC_FILES})
-target_link_libraries( detector ${OpenCV_LIBS} /usr/lib/x86_64-linux-gnu/libopencv_highgui.so)
+target_link_libraries( detector ${OpenCV_LIBS})
